<resources>
    <string name="app_name">LeagueOfYou</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- login activity -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- login fragment -->
    <string name="login">Login</string>
    <string name="username">Username (Email)</string>
    <string name="password">Password</string>
    <string name="save_username">SAVE_USERNAME</string>
    <string name="save_username_toggle">SAVE_USERNAME_TOGGLE</string>
    <string name="logging_in">Logging in...</string>

    <!-- login alert dialog -->
    <string name="invalid_username_password_message">Either your username or password is blank please try again.</string>
    <string name="login_failed_title">Invalid Username or Password</string>
    <string name="login_failed_message">Your Username or password are incorrect please try again.</string>

    <!-- new account fragment -->
    <string name="new_account">Create Account</string>
    <string name="welcome">Welcome to League of You!</string>
    <string name="info">All we need is some information to get started</string>
    <string name="summoner_name_hint">Summoner\'s Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="account">Account</string>

    <!-- new account alert dialog -->
    <string name="username_invalid_title">Username Invalid</string>
    <string name="username_invalid_message">Your username must be an email.</string>
    <string name="username_already_in_use">This username is already in use, please try logging in again.</string>
    <string name="password_invalid_title">Password Invalid</string>
    <string name="password_invalid_message">Your password must contain at least 1 number, 1 uppercase letter, 1 lowercase letter, and at least 7 total characters.</string>
    <string name="dob_invalid_title">Date of Birth Invalid</string>
    <string name="dob_invalid_message">Your date of birth can not be in the future.</string>
    <string name="summoners_invalid_title">Summoners Name Invalid</string>
    <string name="summoners_invalid_message">We were not able to find the summoners name. Please try again.</string>
    <string name="summoners_exists_title">Account Already Exists</string>
    <string name="summoners_exists_message">It appears that this summoner already has an account. </string>
    <string name="progress_account_message">Creating New Account</string>
    <string name="account_exists_title">Account Already Exists</string>
    <string name="account_exists_message">It appears that this summoner already has an account, please try logging in again.</string>
    <string name="missing_input_title">Missing Input</string>
    <string name="missing_input_message">Please try again and enter input into all the fields.</string>
    <string name="password_mismatch_message">The Passwords you enter did not match please try again.</string>

    <!-- support fragment -->
    <string name="support">Support</string>

    <!-- server error -->
    <string name="server_error_title">Unexpected Error Occurred</string>
    <string name="server_error_message">A server error occurred please try again.</string>
    <string name="connection_failed_title">Unable to Connect</string>
    <string name="connection_failed_message">We were not able to connect to the internet, please connect and try again.</string>

    <!-- Dashboard Drawer-->
    <string name="dashbaord">Dashboard</string>
    <string name="champions">Champions</string>
    <string name="items">Items</string>
    <string name="logout">Logout</string>
    <string name="drawer_lvl_text">Lvl</string>
    <string name="dashboard_load_profile_msg">Loading Profile...</string>

    <!-- Dashboard Fragment -->

    <!-- Champion List -->
    <string name="search">Search</string>

    <!-- Ranked Type Codes -->
    <string name="SOLOQ_TYPE_CODE">RANKED_SOLO_5x5</string>

    <string-array name="ranked_names">
        <item>IRON</item>
        <item>BRONZE</item>
        <item>SILVER</item>
        <item>GOLD</item>
        <item>PLATINUM</item>
        <item>DIAMOND</item>
        <item>MASTER</item>
        <item>GRANDMASTER</item>
        <item>CHALLENGER</item>
    </string-array>

    <!-- Champion Page -->
    <string name="champion_name_bundle">CHAMPION_NAME</string>
    <string name="champion_mastery">Mastery</string>
    <string name="overview">Overview</string>
    <string name="builds">Builds</string>
    <string name="spells">Abilities</string>
    <string name="in_game_analysis">In Game Analysis</string>

</resources>