<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/new_account_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/info"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_account_welcome" />

    <RelativeLayout
        android:id="@+id/new_account_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/new_account_summoners_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:hint="@string/summoner_name_hint"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/new_account_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/new_account_summoners_name"
            android:layout_margin="8dp"
            android:hint="@string/username"
            android:textColor="@color/colorAccent"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/new_account_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/new_account_username"
            android:layout_margin="8dp"
            android:hint="@string/password"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/new_account_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/new_account_password"
            android:layout_margin="8dp"
            android:hint="@string/password_confirm"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/new_account_age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/date_of_birth"
            android:layout_below="@id/new_account_password_confirm"
            android:inputType="date"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/new_account_age"
            android:layout_margin="8dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/create_new_account"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>